# sync-engine

./: .gitignore  001_create_global_users.sql  COMPONENTS.md  CONFIG.md  Cargo.toml  README.md  build.rs  component.toml  docker-compose.yml  fetcher.rs  lib.rs  mod.rs  pipeline_runner.rs  schema.toml
docs/: pipeline-patterns.md
docs/examples/: case1-tx-per-window.toml  case10-kafka.toml  case11-init-job.toml  case12-composable.toml  case12-split-transform.toml  case13-merge-slots.toml  case14-slot-json.toml  case2-bulk-tx.toml  case2-composable.toml  case3-composable.toml  case3-tokio-queue.toml  case4-composable.toml  case4-rabbitmq.toml  case5-trigger-once.toml  case6-trigger-webhook.toml  case7-trigger-pg-notify.toml  case8-autocommit.toml  case9-elasticsearch-sink.toml
sync-engine/: Cargo.toml  build.rs
sync-engine/src/: codegen.rs  config_value.rs  context.rs  job.rs  lib.rs  pipeline_runner.rs  registry.rs  runner.rs  slot.rs  standard_job.rs  tests.rs
sync-engine/src/components/: auth.rs  chunker.rs  fetcher.rs  mod.rs  writer.rs
sync-engine/src/pipeline/: adapters.rs  component_registry.rs  composed_source.rs  mod.rs  primitives.rs  registry.rs
sync-engine/src/sinks/: csv.rs  excel.rs  mod.rs
sync-engine/src/step/: autocommit.rs  consumer.rs  control.rs  elasticsearch.rs  fetch.rs  json_slot.rs  kafka.rs  mod.rs  multi_transform.rs  queue_send.rs  setup.rs  sink.rs  transform.rs  wrappers.rs
sync-engine/src/transport/: mod.rs  rabbitmq.rs
sync-engine/tests/: config_value_tests.rs  slot_tests.rs  validation_tests.rs
user-sync/: .env.example  ARCHITECTURE.md  COMPONENTS.md  CONFIG.md  Cargo.toml  build.rs  component.toml  config.toml  pipeline.toml  schema.toml
user-sync/migrations/: 001_create_global_users.sql
user-sync/src/: config.rs  connections.rs  job.rs  main.rs
