[package]
name    = "sync-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "sync_engine"
path = "src/lib.rs"

[dependencies]
tokio                = { version = "1",    features = ["full"] }
tokio-cron-scheduler = "0.13"
async-trait          = "0.1"
reqwest              = { version = "0.12", features = ["json"] }
serde                = { version = "1",    features = ["derive"] }
serde_json           = "1"
sqlx                 = { version = "0.8",  features = ["runtime-tokio", "postgres", "chrono"] }
chrono               = { version = "0.4",  features = ["serde"] }
toml                 = "0.8"
anyhow               = "1"
backon               = "1"
tracing              = "0.1"
