[package]
name    = "user-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-sync"
path = "src/main.rs"

[dependencies]
sync-engine          = { path = "../sync-engine" }
tokio                = { version = "1",    features = ["full"] }
tokio-cron-scheduler = "0.13"
anyhow               = "1"
dotenvy              = "0.15"
chrono               = { version = "0.4",  features = ["serde"] }
sqlx                 = { version = "0.8",  features = ["runtime-tokio", "postgres", "chrono"] }
serde                = { version = "1",    features = ["derive"] }
async-trait          = "0.1"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3",  features = ["env-filter"] }
toml                 = "0.8"

[build-dependencies]
sync-engine = { path = "../sync-engine" }
