[package]
name    = "user-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-sync"
path = "src/main.rs"

[dependencies]
sync-engine          = { path = "../sync-engine", features = ["postgres", "rabbitmq"] }
tokio                = { version = "1",  features = ["full"] }
anyhow               = "1"
dotenvy              = "0.15"
async-trait          = "0.1"
chrono               = { version = "0.4", features = ["serde"] }
sqlx                 = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde                = { version = "1",   features = ["derive"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
sync-engine = { path = "../sync-engine" }
